[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/nave espacial.png" type="Texture" id=1]
[ext_resource path="res://Personaje/Codigo/movimiento.gd" type="Script" id=2]
[ext_resource path="res://Personaje/Poderes/proyectil.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 11.0
height = 24.0

[node name="KinematicBody2D" type="KinematicBody2D" groups=["Personaje"]]
script = ExtResource( 2 )
proyectil = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="canonUp" type="Position2D" parent="."]
position = Vector2( 0, 16 )

[node name="canonDown" type="Position2D" parent="."]
position = Vector2( 0, -16 )

[node name="posicion" type="Position2D" parent="."]

[node name="tiempoPoderBulletHell" type="Timer" parent="."]

[node name="rotador" type="Node2D" parent="."]

[connection signal="timeout" from="tiempoPoderBulletHell" to="." method="_on_tiempoPoderBulletHell_timeout"]
